[package]
name = "time-series"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.11", features = ["serde"]}
env_logger = "0.8"
futures = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.50"
tokio = {version = "1.7", features = ["full"]}
uuid = {version = "0.8.1", features = ["serde", "v4"]}
warp = "0.3"
tempfile = "3.1"
sled = "0.34.0"
bincode = "1.3"
bytes = "1.0.1"
url= "2.2"
tokio-tungstenite="0.14"
futures-timer = "3.0.2"
structopt = "0.3"